Resolves: fdo#31016 try some bandaids to improve Arabic rendering